deployment/user-service/blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-blue
  namespace: user-service
  labels:
    app: user-service
    environment: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
      environment: blue
  template:
    metadata:
      labels:
        app: user-service
        environment: blue
    spec:
      containers:
      - name: user-service
        image: binamin/user-service:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "20m"
          limits:
            memory: "256Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
