deployment/user-service/green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-green
  namespace: user-service
  labels:
    app: user-service
    environment: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
      environment: green
  template:
    metadata:
      labels:
        app: user-service
        environment: green
    spec:
      containers:
      - name: user-service
        image: binamin/user-service:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
