deployment/user-service/service.yaml
# Service to route traffic to either blue or green environment

apiVersion: v1
kind: Service
metadata:
  name: user-s-service
  namespace: user-service
spec:
  selector:
      app: user-service
      environment: blue # initially routes to blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
