deployment/user-service/ingress.yaml
# ingress to expose the application
#  Ingress resource that exposes the user service to external traffic. 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: user-service
spec:
  rules:
  - host: user-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-s-service
            port:
              number: 80
